--- a/src/app/project/_project.pug
+++ b/src/app/project/_project.pug
@@ -1,36 +1,70 @@
-section.project
-  .project__header
-    .wrapper.content--underlined
-      h1.project__title Project name
-      p.project__subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cum eius iure libero nostrum numquam sed sunt voluptas? A, commodi doloremque dolores illum laborum libero pariatur saepe sequi similique voluptatibus.
-  .project__content
-    .project__column
-      h3 Features
-      ul
-        li HTML video player
-        li Video stream encryption
-        li On-fly video decryption
-        li Removable media copy protection
-        li Online update of media-content
-    .project__column
-      h3 Skills & expertise
-      .project__skils
-        strong front-end:
-        ul
-          li AngularJS 1.5
-          li AngularJS 2
-          li HTML 5
-          li CSS3
-          li Bootstrap3
-          li Create JS
-      .project__skils
-        strong backend:
-        ul
-          li Java
-          li Hibernate
-          li Spring
-          li Maven
-          li Log4J
-    .project__gallery
+article.project
+  .project__header-wrap
+    .project__header-bg
+    .project__header
+      h1.project__title Browser games
+      p.project__subtitle <span class="txt--bold">Customs Department Game.</span> Customs employee’s corruption activities in Ukraine simulator. Strong mathematical model of corruption was built at back-end. Angular 2 technology was used at front-end
+      p.project__subtitle <span class="txt--bold">Apple Orchard.</span> HTML5 Apple Orhcard is the live demonstration of the very best what can be done with HTML5 tech so far. Box2d physics, visual effects and sounds are pushing gameplay experience on PC, tablets and touch phones to the one of naitive apps.
+      p.project__subtitle <span class="txt--bold">Golden Chips.</span> HTML5 Golden Chips is the simple yet addictive memory puzzle game. Players are given 30 seconds to find as many identical pairs as they could.
+      p.project__subtitle <span class="txt--bold">Monkey Music.</span> HTML5 Yet another sokoban puzzle game. This time featuring Music Theme and powered by own HTML5 game engine. Monkey Music arguably is the first ever crossplatfrom HTML5 game with sounds on all devices.
+  .project__content.p-content
+    section.p-content__item.p-content__features
+      h2.p-content__title Features
+      ul.p-content__list.p-content__list--features
+        li.p-content__list-features-item HTML video player
+        li.p-content__list-features-item Video stream encryption
+        li.p-content__list-features-item On-fly video decryption
+        li.p-content__list-features-item Removable media copy protection
+        li.p-content__list-features-item Online update of media-content
+
+    section.p-content__item.p-content__skills
+      h2.p-content__title Skills & expertise
+      section.p-content__subitem
+        h3.p-content__subtitle front-end:
+        ul.p-content__list.p-content__list--skills
+          li.p-content__list-skills-item AngularJS 1.5
+          li.p-content__list-skills-item AngularJS 2
+          li.p-content__list-skills-item HTML 5
+          li.p-content__list-skills-item CSS3
+          li.p-content__list-skills-item Bootstrap3
+          li.p-content__list-skills-item Create JS
+      section.p-content__subitem
+        h3.p-content__subtitle backend:
+        ul.p-content__list.p-content__list--skills
+          li.p-content__list-skills-item Java
+          li.p-content__list-skills-item Hibernate
+          li.p-content__list-skills-item Spring
+          li.p-content__list-skills-item Maven
+          li.p-content__list-skills-item Log4J
+
+    .p-content__gallery
+      div.js-for-project.p-gallery-content
+        div.p-gallery-content__item
+          img.p-gallery-img(src="/img/single-project/01.jpg", alt="gallery")
+        div.p-gallery-content__item
+          img.p-gallery-img(src="/img/single-project/02.jpg", alt="gallery")
+        div.p-gallery-content__item
+          img.p-gallery-img(src="/img/single-project/03.jpg", alt="gallery")
+        div.p-gallery-content__item
+          img.p-gallery-img(src="/img/single-project/04.jpg", alt="gallery")
+        div.p-gallery-content__item
+          img.p-gallery-img(src="/img/single-project/05.jpg", alt="gallery")
+        div.p-gallery-content__item
+          img.p-gallery-img(src="/img/single-project/06.jpg", alt="gallery")
+
+      div.js-nav-project.p-gallery-nav
+        div.p-gallery-nav__item
+          img.p-gallery-img(src="/img/single-project/01.jpg", alt="gallery")
+        div.p-gallery-nav__item
+          img.p-gallery-img(src="/img/single-project/02.jpg", alt="gallery")
+        div.p-gallery-nav__item
+          img.p-gallery-img(src="/img/single-project/03.jpg", alt="gallery")
+        div.p-gallery-nav__item
+          img.p-gallery-img(src="/img/single-project/04.jpg", alt="gallery")
+        div.p-gallery-nav__item
+          img.p-gallery-img(src="/img/single-project/05.jpg", alt="gallery")
+        div.p-gallery-nav__item
+          img.p-gallery-img(src="/img/single-project/06.jpg", alt="gallery")
+
 
 
