--- a/src/app/works/_works.pug
+++ b/src/app/works/_works.pug
@@ -11,56 +11,56 @@ article.works#portfolio
         img.works__img(src= worksImg, alt= worksImgAlt)
 
     +worksItem(
-      '#',
+      'single-project.html',
       'Cloud-based push notification platform',
       'lorem',
       'img/works/1.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
-      '#',
+      'single-project.html',
       'Cloud-based push notification platform',
       'lorem',
       'img/works/2.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
-      '#',
+      'single-project.html',
       'Cloud-based push notification platform',
       'lorem',
       'img/works/3.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
-      '#',
+      'single-project.html',
       'Cloud-based push notification platform',
       'lorem',
       'img/works/4.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
-      '#',
+      'single-project.html',
       'Cloud-based push notification platform',
       'lorem',
       'img/works/5.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
-      '#',
+      'single-project.html',
       'Cloud-based push notification platform',
       'lorem',
       'img/works/6.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
-      '#',
+      'single-project.html',
       'Cloud-based push notification platform',
       'lorem',
       'img/works/7.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
-      '#',
+      'single-project.html',
       'Cloud-based push notification platform',
       'lorem',
       'img/works/8.png',
