--- a/src/app/project/_project.scss
+++ b/src/app/project/_project.scss
@@ -1,31 +1,299 @@
+.single-project {
+	@extend .bg--pale-grey;
+}
+
 .project {
 	&__header {
-		position: relative;
-		display: flex;
-		align-items: center;
-		max-height: 500px;
-		min-height: 40vh;
-		background: rgba(purple, .5) url(./../img/slogan-bg.jpg) no-repeat fixed;
-		background-size: cover;
-		color: #fff;
-		text-align: center;
-		&::before,
-		&::after {
-			content: '';
+
+		&-wrap {
+			padding-top: 100px;
+			padding-bottom: 50px;
+			position: relative;
+			display: flex;
+			align-items: center;
+			min-height: 40vh;
+
+			color: $white;
+			text-align: center;
+			@media (min-width: $sm) {
+				padding-bottom: 60px;
+			}
+			@media (min-width: $md) {
+				padding-top: 120px;
+			}
+			@media (min-width: $md) {
+				padding-top: 150px;
+				padding-bottom: 95px;
+			}
+
+			&::after {
+				content: '';
+				position: absolute;
+				top: 0;
+				bottom: 0;
+				right: 0;
+				left: 0;
+			}
+			&::after{
+				background-color: rgba($black, .65);
+			}
+		}
+
+		&-bg {
 			position: absolute;
 			top: 0;
 			bottom: 0;
 			right: 0;
 			left: 0;
+
+			@media (min-width: $sm) {
+				background: rgba(purple, .5) url(./../img/single-project/example.jpg) no-repeat fixed;
+				background-size: cover;
+				filter: blur(2px);
+			}
+
 		}
-		&::after{
-			filter: blur(5px);
+
+		@extend .wrapper, .content--underlined;
+		position: relative;
+		z-index: 1;
+	}
+
+	&__title {
+		@extend .title-section, .color--pale-grey;
+		text-align: center;
+		text-transform: uppercase;
+	}
+
+	&__subtitle {
+		@extend .content-max-width, .txt-nm, .color--pale-grey,;
+		text-align: left;
+		line-height: 1.5;
+		margin-bottom: 1rem;
+	}
+
+	&__content {
+		@extend .wrapper;
+		background-color: $white;
+		box-shadow: 0px 3px 5px 0 $black-010;
+		margin-left: 15px;
+		margin-right: 15px;
+		max-width: $lg - 30;
+		padding: 50px 30px;
+		transform: translateY(-50px);
+		@media (min-width: $sm) {
+			padding: 60px 40px;
+			transform: translateY(-60px);
 		}
-		&::before{
-			background-color: rgba(#000, .5);
+		@media (min-width: $lg) {
+			margin-left: auto;
+			margin-right: auto;
+			padding: 95px;
+			transform: translateY(-95px);
 		}
 	}
-	&__content {
+}
 
+.p-content {
+	&__item {
+		background-color: $white;
+		margin-bottom: 2.5rem;
+	}
+
+	&__subitem {
+		margin-bottom: 1.25rem;
+		margin-left: 15px;
+	}
+
+	&__title {
+		font-size: 1.125rem;
+		font-weight: 600;
+		letter-spacing: 1.4px;
+		text-transform: uppercase;
+		color: $brownish-grey;
+		margin-top: 0;
+		margin-bottom: 1rem;
+	}
+
+	&__subtitle {
+		font-size: 1rem;
+		letter-spacing: .4px;
+		text-transform: uppercase;
+		color: $brownish-grey;
+		margin-top: 0;
+		margin-bottom: .5rem;
+	}
+
+	&__list {
+		margin: 0;
+
+		&--features {
+			@extend .txt-nm--light;
+			padding-left: 30px;
+			line-height: 1.4;
+		}
+
+		&-features-item:not(:last-child) {
+			margin-bottom: 5px;
+			@media (min-width: $md) {
+				margin-bottom: 10px;
+			}
+		}
+
+		&--skills {
+			padding: 0;
+			list-style: none;
+		}
+
+		&-skills-item {
+			display: inline-block;
+			font-size: 12px;
+			line-height: 2;
+			letter-spacing: 0.9px;
+			font-family: $font-secondary;
+			color: $white;
+			background-color: $warm-grey;
+			padding: 0 10px;
+			margin-bottom: 5px;
+			border-radius: 4px;
+		}
+	}
+
+	&__gallery {
+		position: relative;
+		overflow: hidden;
+	}
+
+	@media (min-width: $md) {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+
+		&__item {
+			width: calc(50% - 17px);
+		}
+
+		&__gallery {
+			width: 100%;
+			border: 5px solid $primary;
+		}
+
+		@supports (display: grid) {
+			display: grid;
+			grid-column-gap: 35px;
+			grid-row-gap: 2.5rem;
+			grid-template: auto auto / 1fr 1fr;
+			grid-template-areas: 'feauters skills' 'gallery gallery';
+			&__item {
+				width: 100%;
+				margin-bottom: 0;
+			}
+			&__skills {
+				grid-area: skills;
+			}
+
+			&__features {
+				grid-area: feauters;
+			}
+
+			&__gallery {
+				grid-area: gallery;
+			}
+		}
+	}
+}
+
+.p-gallery {
+	&-content,
+	&-nav {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+	}
+
+	&-content {
+		width: 100%;
+		height: 250px;
+		margin-bottom: 1rem;
+		background-color: $brownish-grey;
+		overflow: hidden;
+		border: 5px solid $primary;
+		box-shadow: 0px 3px 5px 0 $black-010;
+		&__item {
+			height: 250px;
+		}
+
+
+
+		@media (min-width: $sm) and (orientation: landscape) {
+			height: 300px;
+			&__item {
+				height: 300px;
+			}
+		}
+
+		@media (min-width: $md) {
+			margin-bottom: 0;
+			border: 0;
+
+			&:hover {
+				~ .p-gallery-nav {
+					opacity: 0;
+				}
+			}
+
+			height: 600px;
+			&__item {
+				height: 600px;
+			}
+
+		}
+	}
+
+	&-nav {
+		transition: opacity .3s ease;
+
+		&__item {
+			overflow: hidden;
+			width: 100%;
+			height: 100px;
+			border: 5px solid lighten($primary, 25%);
+		}
+		.slick-slide {
+			padding-left: 5px;
+			padding-right: 5px;
+		}
+
+		.slick-current .p-gallery-nav__item {
+
+			border-color: $primary;
+		}
+
+		@media (min-width: $md) {
+			position: absolute;
+			top: 0;
+			width: 170px;
+			right: 35px;
+			background-color: rgba($black, .3);
+			padding-left: 10px;
+			padding-right: 10px;
+			.slick-slide {
+				padding: 0;
+			}
+
+			&__item {
+				width: 150px;
+				height: 150px;
+				border-color: transparent;
+			}
+		}
+	}
+
+	&-img {
+		display: block;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: center;
 	}
 }
