added blog-section for home-page

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -25,6 +25,7 @@ html(lang="en")
 			include ../app/works/_works.pug
 			include ../app/team/_team.pug
 			include ../app/technology/_technology.pug
+			include ../app/home-blog/_home-blog.pug
 			include ../app/partners/_partners.pug
 			include ../app/slogan/_slogan.pug
 			include ../app/contact/_contact.pug
