--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import '../app/works/works';
 @import '../app/expertise/expertise';
 @import '../app/team/team';
+@import '../app/home-blog/home-blog';
 @import '../app/partners/partners';
 @import '../app/slogan/slogan';
 @import '../app/contact/contact';
